--- a/WebApplication1/WebApplication1/Views/Wypozyczenia_Czasopisma/Edit.cshtml
+++ b/WebApplication1/WebApplication1/Views/Wypozyczenia_Czasopisma/Edit.cshtml
@@ -24,8 +24,11 @@
         @Html.Label("Data Zwrotu", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.TextBoxFor(model => model.Data_Zwrotu, String.Format("{0:d}", ((DateTime)Model.Data_Zwrotu).ToShortDateString()), new { @class = "datefield", type = "date" })
-
             @Html.ValidationMessageFor(model => model.Data_Zwrotu, "", new { @class = "text-danger" })
+            @if (ViewBag.Error != null)
+            {
+                @Html.Label((String)ViewBag.Error, new { @class = "text-danger" })
+            }
         </div>
     </div>
     <div class="form-group">
