--- a/WebApplication1/WebApplication1/Views/Czytelnicy/Edit.cshtml
+++ b/WebApplication1/WebApplication1/Views/Czytelnicy/Edit.cshtml
@@ -54,6 +54,10 @@
         <div class="col-md-10">
             @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+            @if (ViewBag.Error != null)
+            {
+                @Html.Label((String)ViewBag.Error, new { @class = "text-danger" })
+            }
         </div>
     </div>
 
